temp writeup for all projects and experiences

--- a/public/experiences/bluebono/index.html
+++ b/public/experiences/bluebono/index.html
@@ -270,6 +270,11 @@ Data Analyst Intern at Bluebono | Clara Zeng
 <div id="content">
 <section id="single">
   <div class="container">
+    <div class="mb-4 mt-3">
+      <a href="javascript:history.back()" style="text-decoration: none; font-size: 1rem;">
+        ← Back
+      </a>
+    </div>
     <div class="row justify-content-center">
       <div class="col-sm-12 col-md-12 col-lg-9">
         <div class="pr-lg-4">
