--- a/public/experiences/cmind-ai/index.html
+++ b/public/experiences/cmind-ai/index.html
@@ -271,6 +271,11 @@ Associate Data Scientist at Cmind AI | Clara Zeng
 <div id="content">
 <section id="single">
   <div class="container">
+    <div class="mb-4 mt-3">
+      <a href="javascript:history.back()" style="text-decoration: none; font-size: 1rem;">
+        ← Back
+      </a>
+    </div>
     <div class="row justify-content-center">
       <div class="col-sm-12 col-md-12 col-lg-9">
         <div class="pr-lg-4">
